--- a/src/pages/Application.css
+++ b/src/pages/Application.css
@@ -1,5 +1,7 @@
 
 
+/* styles.css */
+
 .container {
     max-width: 800px;
     margin: 0 auto;
@@ -13,7 +15,7 @@
   }
   
   .logout-button {
-    background-color: #f44336;
+    background-color: #007bff;
     color: #fff;
     padding: 8px 16px;
     border: none;
@@ -25,11 +27,35 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    
   }
   
-  .nav-link {
-    margin-right: 10px;
+  
+  
+  .button-wrapper {
+    display: inline-block;
+    margin: 10px;
+    
   }
   
-  /* הוסף עיצוב נוסף כפי שרלומת הקומפוננטה */
+  .button {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 20px;
+    
+  }
+  
+  .button:hover {
+    background-color: #0056b3;
+  }
+  
+  .button:active {
+    background-color: #0056b3;
+  }
   
